--- a/indek.html
+++ b/indek.html
@@ -132,7 +132,7 @@
           </div>
           <div class="col-md-4 mb3">
             <div class="card">
-              <img class="border border-3 border-dark" src="img/Asus-VivoBook-Pro-14X-OLED-300x300.jpg" class="card-img-top" alt="Product1" />
+              <img class="border border-3 border-danger" src="img/Asus-VivoBook-Pro-14X-OLED-300x300.jpg" class="card-img-top" alt="Product1" />
               <div class="card-body">
                 <h6 class="card-text text-center">Asus-VivoBook-Pro-14X-OLED-300x300</h6>
                 <p>Spesifikasi:</p>
